[gd_scene load_steps=26 format=3 uid="uid://dj07mg1sgtrmu"]

[ext_resource type="Script" path="res://nodos/player/player.gd" id="1_wp7lc"]
[ext_resource type="Script" path="res://nodos/player/player_camera.gd" id="2_hunjk"]
[ext_resource type="Script" path="res://nodos/player/atack_player/atack_player.gd" id="2_ucc6x"]
[ext_resource type="Script" path="res://nodos/player/atack_player/collision_atack_player/collision_atack_player.gd" id="3_yge8a"]
[ext_resource type="Texture2D" uid="uid://bqh0w6153q0gf" path="res://arte/Assets/prota.png" id="4_iq03c"]
[ext_resource type="Texture2D" uid="uid://dlnxlm8d8iur6" path="res://arte/Assets/plataforma.png" id="5_pc6bh"]
[ext_resource type="Script" path="res://nodos/player/state_machine_player.gd" id="6_pupon"]
[ext_resource type="Script" path="res://nodos/player/idle_state_player.gd" id="7_tkbq0"]
[ext_resource type="Script" path="res://nodos/player/walk_state_player.gd" id="7_vngty"]
[ext_resource type="Script" path="res://nodos/player/jump_state_player.gd" id="8_fvqp5"]
[ext_resource type="Script" path="res://nodos/player/attack_state_player.gd" id="9_3j50o"]
[ext_resource type="Script" path="res://nodos/player/fall_state_player.gd" id="10_bjbsj"]
[ext_resource type="Script" path="res://nodos/player/hurt_state_player.gd" id="10_cryw5"]
[ext_resource type="Script" path="res://nodos/player/dead_state_player.gd" id="11_e346p"]
[ext_resource type="Script" path="res://nodos/player/attack_vertical_state_player.gd" id="12_35g1e"]
[ext_resource type="Script" path="res://nodos/player/reappear_state_player.gd" id="14_oh2n5"]
[ext_resource type="Script" path="res://nodos/player/state_label.gd" id="14_x11im"]
[ext_resource type="Script" path="res://nodos/player/healing_state_player.gd" id="15_nxwfi"]
[ext_resource type="AudioStream" uid="uid://c5iyx3qp6tp6o" path="res://sounds/hurt.mp3" id="17_7mkua"]
[ext_resource type="AudioStream" uid="uid://chl8ocbaoyvla" path="res://sounds/attack.mp3" id="18_73ihh"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tlug4"]
radius = 26.6667
height = 95.2381

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ycceo"]
radius = 33.3334
height = 106.667

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k4lr0"]
size = Vector2(45.7142, 106.667)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_o6p3v"]
particle_flag_disable_z = true
direction = Vector3(-1, 0, 0)
spread = 60.0
initial_velocity_min = 100.0
initial_velocity_max = 300.0
gravity = Vector3(0, 0, 0)
scale_min = 3.0
scale_max = 3.0
color = Color(0.592157, 0.282353, 0.0823529, 1)
turbulence_noise_strength = 2.8

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_j64mn"]

[node name="player" type="CharacterBody2D"]
process_mode = 1
scale = Vector2(0.525, 0.525)
collision_mask = 8
script = ExtResource("1_wp7lc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 1
shape = SubResource("CapsuleShape2D_tlug4")
debug_color = Color(0.901961, 0, 0.141176, 0.478431)

[node name="hitbox_player" type="Area2D" parent="."]
collision_mask = 38

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox_player"]
shape = SubResource("CapsuleShape2D_ycceo")
debug_color = Color(0.0313726, 0.647059, 0.164706, 0.419608)

[node name="player_camera" type="Camera2D" parent="."]
script = ExtResource("2_hunjk")

[node name="shake_timer" type="Timer" parent="player_camera"]
wait_time = 0.3
one_shot = true

[node name="coyote_timer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="jump_buffer_timer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="attack_timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="attack_position2D" type="Marker2D" parent="."]
rotation = -6.28319

[node name="attack_area" type="Area2D" parent="attack_position2D" node_paths=PackedStringArray("Player")]
position = Vector2(70, 0)
collision_layer = 32
collision_mask = 18
script = ExtResource("2_ucc6x")
Player = NodePath("../..")

[node name="collision_attack" type="CollisionShape2D" parent="attack_position2D/attack_area" node_paths=PackedStringArray("attack_timer")]
shape = SubResource("RectangleShape2D_k4lr0")
script = ExtResource("3_yge8a")
attack_timer = NodePath("../../../attack_timer")

[node name="sprite_attack" type="Sprite2D" parent="attack_position2D/attack_area"]
position = Vector2(-1.42861, 0.238101)
scale = Vector2(0.149393, 0.823182)
texture = ExtResource("5_pc6bh")

[node name="attack_position2D_vertical" type="Marker2D" parent="."]
position = Vector2(-1.19209e-07, 0)
rotation = -1.5708

[node name="attack_area" type="Area2D" parent="attack_position2D_vertical" node_paths=PackedStringArray("Player")]
position = Vector2(83.8095, 0)
collision_layer = 32
collision_mask = 18
script = ExtResource("2_ucc6x")
Player = NodePath("../..")

[node name="collision_attack" type="CollisionShape2D" parent="attack_position2D_vertical/attack_area" node_paths=PackedStringArray("attack_timer")]
shape = SubResource("RectangleShape2D_k4lr0")
script = ExtResource("3_yge8a")
attack_timer = NodePath("../../../attack_timer")

[node name="sprite_attack" type="Sprite2D" parent="attack_position2D_vertical/attack_area"]
position = Vector2(-1.42861, 0.238101)
scale = Vector2(0.149393, 0.823182)
texture = ExtResource("5_pc6bh")

[node name="position2D" type="Marker2D" parent="."]
metadata/_edit_group_ = true

[node name="walk_particles" type="GPUParticles2D" parent="position2D"]
position = Vector2(0, 51.4286)
scale = Vector2(1.07619, 0.390476)
emitting = false
amount = 10
process_material = SubResource("ParticleProcessMaterial_o6p3v")
lifetime = 0.3

[node name="sprite_player" type="Sprite2D" parent="position2D"]
material = SubResource("CanvasItemMaterial_j64mn")
scale = Vector2(0.392552, 0.392552)
texture = ExtResource("4_iq03c")

[node name="knockback_timer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="reappear_timer" type="Timer" parent="."]
one_shot = true

[node name="heal_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="invincibility_timer" type="Timer" parent="."]
one_shot = true

[node name="state_machine_player" type="Node" parent="." node_paths=PackedStringArray("initial_state", "Player")]
script = ExtResource("6_pupon")
initial_state = NodePath("idle_state_player")
Player = NodePath("..")

[node name="idle_state_player" type="Node" parent="state_machine_player"]
script = ExtResource("7_tkbq0")

[node name="walk_state_player" type="Node" parent="state_machine_player"]
script = ExtResource("7_vngty")

[node name="jump_state_player" type="Node" parent="state_machine_player"]
script = ExtResource("8_fvqp5")

[node name="fall_state_player" type="Node" parent="state_machine_player"]
script = ExtResource("10_bjbsj")

[node name="attack_state_player" type="Node" parent="state_machine_player"]
script = ExtResource("9_3j50o")

[node name="attack_vertical_state_player" type="Node" parent="state_machine_player"]
script = ExtResource("12_35g1e")

[node name="hurt_state_player" type="Node" parent="state_machine_player"]
script = ExtResource("10_cryw5")

[node name="dead_state_player" type="Node" parent="state_machine_player"]
script = ExtResource("11_e346p")

[node name="reappear_state_player" type="Node" parent="state_machine_player"]
script = ExtResource("14_oh2n5")

[node name="healing_state_player" type="Node" parent="state_machine_player"]
script = ExtResource("15_nxwfi")

[node name="Label" type="Label" parent="." node_paths=PackedStringArray("state_machine")]
offset_left = -19.0476
offset_top = -87.6191
offset_right = 20.9524
offset_bottom = -64.6191
script = ExtResource("14_x11im")
state_machine = NodePath("../state_machine_player")

[node name="hurt_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("17_7mkua")

[node name="attack_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("18_73ihh")
volume_db = -18.0

[connection signal="area_entered" from="hitbox_player" to="state_machine_player" method="_on_hitbox_player_area_entered"]
[connection signal="body_entered" from="hitbox_player" to="." method="_on_hitbox_player_body_entered"]
[connection signal="body_entered" from="hitbox_player" to="state_machine_player" method="_on_hitbox_player_body_entered"]
[connection signal="area_entered" from="attack_position2D/attack_area" to="attack_position2D/attack_area" method="_on_area_entered"]
[connection signal="area_entered" from="attack_position2D_vertical/attack_area" to="attack_position2D_vertical/attack_area" method="_on_area_entered"]
